--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
     "uuid": "^9.0.1",
+    "uuidv4": "^6.2.13",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
