--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
+    "framer-motion": "^11.0.3",
     "next": "14.0.3",
     "radix-ui": "^1.0.1",
     "react": "^18",
